# audfprint2

./: .gitignore  README.md  audfprint.py  audfprint_analyze.py  audfprint_match.py  audio_read.py  hash_table.py  pyproject.toml  stft.py
docs/: batch-processing-tutorial.md
src/audfprint/: __init__.py  __main__.py  cli.py
src/audfprint/core/: analyzer.py  matcher.py
src/audfprint/utils/: __init__.py  audio.py
src/audfprint2/: __init__.py  __main__.py  cli.py
src/audfprint2/core/: __init__.py  analyzer.py  hash_table.py  matcher.py
src/audfprint2/utils/: audio.py  stft.py
tests/: __init__.py  profile_audfprint.py  profile_audfprint_match.py  report_prof.py
tests/integration/: test_workflows.py
tests/unit/: test_analyzer.py  test_analyzer_additional.py  test_audio_ffmpeg.py  test_cli.py  test_cli_main.py  test_hash_table.py  test_matcher.py  test_matcher_counts.py
