[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "audfprint2"
version = "0.1.0"
description = "Landmark-based audio fingerprinting utilities."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Dan Ellis" },
    { name = "Daniel Cervenkov" },
    { name = "Roman Zhymabek" },
]
license = { file = "LICENSE" }
dependencies = [
    "numpy==1.26.4",
    "scipy==1.11.3",
    "joblib==1.3.2",
    "psutil==5.9.5",
    "h5py==3.11.0",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "mypy>=1.18.2",
]

[project.scripts]
audfprint = "audfprint2.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.13.2",
    "scipy-stubs>=1.16.3.0",
]

[tool.coverage.run]
source = [
    "src",
]
omit = [
    "tests/*",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
